[package]
name = "nadex"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = "0.25.1"
lru = "0.12.3"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dirs = "5.0"
strum = "0.26"
strum_macros = "0.26"
chrono = "0.4"
