[package]
name = "nadex"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
image = "0.25.1"
lru = "0.12.3"
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dirs = "5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11.3"
rayon = "1.8"
tempfile = "3.20.0"
mpsc = "0.2.6"
